WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114152
[BlackBerry] WebPage: misc build fixes
https://bugs.webkit.org/show_bug.cgi?id=114152
Summary
[BlackBerry] WebPage: misc build fixes
Alberto Garcia
Reported
2013-04-08 01:42:37 PDT
Remove unused parameters from WebPagePrivate::*Plugin* methods. Replace TAAUTO with TASTART (this changed in
r120495
). Rename m_fullscreenVideoNode to m_fullscreenNode (this changed in
r142220
). Rename paintingGoesToWindow() to paintsIntoWindow() (this changed in
r113514
).
Attachments
Patch
(4.64 KB, patch)
2013-04-08 01:45 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-04-08 01:45:00 PDT
Created
attachment 196840
[details]
Patch
WebKit Commit Bot
Comment 2
2013-04-08 02:25:59 PDT
Comment on
attachment 196840
[details]
Patch Clearing flags on attachment: 196840 Committed
r147905
: <
http://trac.webkit.org/changeset/147905
>
WebKit Commit Bot
Comment 3
2013-04-08 02:26:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug