[BlackBerry] WebPage: misc build fixes https://bugs.webkit.org/show_bug.cgi?id=114152

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-04-08
Reviewed by Carlos Garcia Campos.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::shouldPluginEnterFullScreen):
(BlackBerry::WebKit::WebPagePrivate::didPluginExitFullScreen):
(BlackBerry::WebKit::WebPagePrivate::onPluginStartBackgroundPlay):
(BlackBerry::WebKit::WebPagePrivate::onPluginStopBackgroundPlay):
Remove unused parameters.

(BlackBerry::WebKit::WebPagePrivate::zoomAnimationFinished):
(BlackBerry::WebKit::WebPage::blockZoom):
Replace TAAUTO with TASTART (this changed in r120495).

(BlackBerry::WebKit::WebPagePrivate::setViewportSize):
Rename m_fullscreenVideoNode to m_fullscreenNode (this changed in
r142220).

(BlackBerry::WebKit::WebPagePrivate::compositorDrawsRootLayer):
Rename paintingGoesToWindow() to paintsIntoWindow() (this changed in
r113514).

Canonical link: https://commits.webkit.org/132534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147905 268f45cc-cd09-0410-ab3c-d52691b4dbfc